@@ -40,7 +40,7 @@ setup(name='zope.browserresource',
       namespace_packages=['zope'],
       include_package_data=True,
       install_requires=['setuptools',
-                        'zope.component',
+                        'zope.component>=3.8.0',
                         'zope.configuration',
                         'zope.contenttype',
                         'zope.i18n',
@@ -48,7 +48,6 @@ setup(name='zope.browserresource',
                         'zope.location',
                         'zope.publisher>=3.8',
                         'zope.schema',
-                        'zope.site',
                         'zope.traversing>3.7',
                         ],
       extras_require={
